--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,3 +1,9 @@
+<!--
+SPDX-FileCopyrightText: 2021 Andreas Schmidt <andreas.schmidt@iese.fraunhofer.de>
+
+SPDX-License-Identifier: CC0-1.0
+-->
+
 # This action builds* all the pushes to main.
 # Additionally it builds* for each PR.
 #
