--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,7 @@
+# SPDX-FileCopyrightText: 2021 Andreas Schmidt <andreas.schmidt@iese.fraunhofer.de>
+#
+# SPDX-License-Identifier: EPL-2.0
+
 [package]
 name = "basyx-rs"
 authors = ["Daniel Hillen <daniel.hillen@iese.fraunhofer.de>", "Andreas Schmidt <andreas.schmidt@iese.fraunhofer.de>"]
