--- a/about.toml
+++ b/about.toml
@@ -1,3 +1,7 @@
+# SPDX-FileCopyrightText: 2021 Andreas Schmidt <andreas.schmidt@iese.fraunhofer.de>
+#
+# SPDX-License-Identifier: CC0-1.0
+
 accepted = [
     "Apache-2.0",
     "BSD-3-Clause",
