--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,8 +1,6 @@
-<!--
-SPDX-FileCopyrightText: 2021 Andreas Schmidt <andreas.schmidt@iese.fraunhofer.de>
-
-SPDX-License-Identifier: CC0-1.0
--->
+# SPDX-FileCopyrightText: 2021 Andreas Schmidt <andreas.schmidt@iese.fraunhofer.de>
+#
+# SPDX-License-Identifier: EPL-2.0
 
 # This Action is triggered when a version is tagged.
 # It publishes the crates in the repo to crates.io.
