--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,10 @@
-# SPDX-FileCopyrightText: 2021 Andreas Schmidt <andreas.schmidt@iese.fraunhofer.de>
+# SPDX-FileCopyrightText: 2021 Fraunhofer Institute for Experimental Software Engineering IESE
 #
 # SPDX-License-Identifier: EPL-2.0
 
 [package]
 name = "basyx-rs"
-authors = ["Daniel Hillen <daniel.hillen@iese.fraunhofer.de>", "Andreas Schmidt <andreas.schmidt@iese.fraunhofer.de>"]
+authors = ["Daniel Hillen <daniel.hillen@iese.fraunhofer.de>", "Fraunhofer Institute for Experimental Software Engineering IESE"]
 description = "A Rust library to work with Asset Administration Shells."
 documentation = "https://github.com/eclipse-basyx/rust-sdk/blob/main/README.md"
 keywords = ["aas", "basyx", "serde"]
