--- a/about.toml
+++ b/about.toml
@@ -1,4 +1,4 @@
-# SPDX-FileCopyrightText: 2021 Andreas Schmidt <andreas.schmidt@iese.fraunhofer.de>
+# SPDX-FileCopyrightText: 2021 Fraunhofer Institute for Experimental Software Engineering IESE
 #
 # SPDX-License-Identifier: CC0-1.0
 
